<?xml version="1.0" encoding="UTF-8"?>

<ScrollView
    android:id="@+id/scrollViewLocationChoices"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    >
    
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" 
	android:layout_width="fill_parent" 
	android:layout_height="fill_parent"
	android:paddingBottom="10dip"
	android:paddingLeft="10dip"
	android:paddingRight="10dip"
	>
 
 	<Button android:id="@+id/btnGPSLocation" 
		android:layout_width="250dip"
		android:layout_height="wrap_content" 
		android:layout_centerHorizontal="true" 
		android:textStyle="bold"
		android:text="@string/gpsButtonDialog" 
		android:textSize="16dip"
		android:textColor="@color/black"
		android:background="@drawable/generic_highlight_button"		
		/>
		
 	<Button android:id="@+id/btnMapLocation" 
 		android:layout_marginTop="7dip"
 		android:layout_below="@+id/btnGPSLocation"
		android:layout_width="250dip"
		android:layout_height="wrap_content" 
		android:layout_centerHorizontal="true" 
		android:textStyle="bold"
		android:text="@string/mapButtonDialog"
		android:textSize="16dip"		
		android:textColor="@color/black"
		android:background="@drawable/generic_highlight_button"
		/>		
 	
	<Button android:id="@+id/btnLocationCancel" 
		android:layout_marginTop="15dip"
		android:layout_width="250dip"
		android:layout_below="@+id/btnMapLocation"
		android:layout_height="wrap_content" 
		android:layout_centerHorizontal="true"
		android:textSize="16dip"
		android:textColor="@color/white"
		android:textStyle="bold"
		android:text="@string/cancelButtonDialog" 
		android:background="@drawable/cancel_highlight_button"
		/>
 
</RelativeLayout>

</ScrollView>

